--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -18,7 +18,7 @@ env:
 
 jobs:
     build-and-deploy-to-dev:
-      runs-on: ubuntu-latest
+      runs-on: windows-latest
       steps:
                   
       # Please refer to https://github.com/Azure/login#configure-deployment-credentials for help on the Azure login action and setting up your secrets 
