--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -1,7 +1,6 @@
 name: Create Azure Resources
-on: 
-workflow-dispatch
-
+on:
+  workflow_dispatch:
 env:
     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID  }}    # set this to your Azure Subscription Id
     AZURE_RESOURCEGROUP_NAME: rg-metarisklive                      # set this to your preferred resource group name
