--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -7,7 +7,7 @@ env:
     AZURE_WEBAPP_NAME: metarisklive                          # set this to your preferred web app name
     ASP_NAME: metariskliveserviceplan
     SQLSERVER_NAME: metarisklivesqlserver                         # set this to your preferred sql server name
-    DATABASE_NAME: dbmetarisklives                   # set this to your preferred sql database name
+    DATABASE_NAME: metarisklivesdb                  # set this to your preferred sql database name
     SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}                # Create a secret in your Github repo for the SQL Admin login name you want to use
     SQLADMIN_PASS: ${{ secrets.SQLADMIN_PASS  }}                 # Create a secret in your Github repo for the SQL Admin password you want to use
 
