--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -3,8 +3,8 @@ on:
   workflow_dispatch:
 env:
     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID  }}    # set this to your Azure Subscription Id
-    AZURE_RESOURCEGROUP_NAME: rg-metarisklive1                      # set this to your preferred resource group name
-    AZURE_WEBAPP_NAME: metarisklive                          # set this to your preferred web app name
+    AZURE_RESOURCEGROUP_NAME: rg-metarisklive                      # set this to your preferred resource group name
+    AZURE_WEBAPP_NAME: metarisklivetest                         # set this to your preferred web app name
     ASP_NAME: metariskliveserviceplan
     SQLSERVER_NAME: metarisklivesqlserver                         # set this to your preferred sql server name
     DATABASE_NAME: metarisklivesdb                  # set this to your preferred sql database name
