--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -3,11 +3,11 @@ on:
   workflow_dispatch:
 env:
     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID  }}    # set this to your Azure Subscription Id
-    AZURE_RESOURCEGROUP_NAME: rg-metarisklive                      # set this to your preferred resource group name
-    AZURE_WEBAPP_NAME: metarisklivetest                         # set this to your preferred web app name
-    ASP_NAME: metariskliveserviceplan
-    SQLSERVER_NAME: metarisklivesqlserver                         # set this to your preferred sql server name
-    DATABASE_NAME: metarisklivesdb                  # set this to your preferred sql database name
+    AZURE_RESOURCEGROUP_NAME: rg_metarisklive_deployment                      # set this to your preferred resource group name
+    AZURE_WEBAPP_NAME: metarisklive-test                         # set this to your preferred web app name
+    ASP_NAME: metarisklive-asp
+    SQLSERVER_NAME: metarisklive-sqlserver                         # set this to your preferred sql server name
+    DATABASE_NAME: metarisklives-db                  # set this to your preferred sql database name
     SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}                # Create a secret in your Github repo for the SQL Admin login name you want to use
     SQLADMIN_PASS: ${{ secrets.SQLADMIN_PASS  }}                 # Create a secret in your Github repo for the SQL Admin password you want to use
 
