--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -3,11 +3,11 @@ on:
   workflow_dispatch:
 env:
     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID  }}    # set this to your Azure Subscription Id
-    AZURE_RESOURCEGROUP_NAME: rg_metarisklive_deployment                      # set this to your preferred resource group name
-    AZURE_WEBAPP_NAME: metarisklive-test                         # set this to your preferred web app name
-    ASP_NAME: metarisklive-asp
-    SQLSERVER_NAME: metarisklive-sqlserver                         # set this to your preferred sql server name
-    DATABASE_NAME: metarisklives-db                  # set this to your preferred sql database name
+    AZURE_RESOURCEGROUP_NAME: MyTestRGroup                     # set this to your preferred resource group name
+    AZURE_WEBAPP_NAME: mytestwebapp2022                         # set this to your preferred web app name
+    ASP_NAME: mytestasp2022-asp
+    SQLSERVER_NAME: testsqlserver2022                         # set this to your preferred sql server name
+    DATABASE_NAME: testsqldb2022                  # set this to your preferred sql database name
     SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}                # Create a secret in your Github repo for the SQL Admin login name you want to use
     SQLADMIN_PASS: ${{ secrets.SQLADMIN_PASS  }}                 # Create a secret in your Github repo for the SQL Admin password you want to use
 
@@ -38,7 +38,7 @@ jobs:
           # You can change these environment variables for your configuration:   AZURE_SUBSCRIPTION_ID
           scope: subscription
           subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
-          region: centralus # Set this to your target region
+          region: eastus # Set this to your target region
           template: repo/templates/azuredeploy.resourcegroup.json  # Set this to the location of your template file
           parameters: repo/templates/azuredeploy.resourcegroup.parameters.json rgName=${{env.AZURE_RESOURCEGROUP_NAME}} #override rgName in parameters file
 
@@ -50,7 +50,7 @@ jobs:
           scope: resourcegroup
           subscriptionId: ${{ env.AZURE_SUBSCRIPTION_ID }}
           resourceGroupName: ${{env.AZURE_RESOURCEGROUP_NAME}}
-          region: eastus2 # Set this to your target region
+          region: eastus # Set this to your target region
           template: repo/templates/azuredeploy.json  # Set this to the location of your template file
           parameters: repo/templates/azuredeploy.parameters.json webappName=${{env.AZURE_WEBAPP_NAME}} aspName=${{env.ASP_NAME}} sqlServerName=${{env.SQLSERVER_NAME}} databaseName=${{env.DATABASE_NAME}} sqlAdminLogin=${{env.SQLADMIN_LOGIN}} sqlAdminPass=${{env.SQLADMIN_PASS}} # Set this to the location of your parameters file
  
