--- a/.github/workflows/infraworkflow.yml
+++ b/.github/workflows/infraworkflow.yml
@@ -5,7 +5,7 @@ env:
     AZURE_SUBSCRIPTION_ID: ${{ secrets.AZURE_SUBSCRIPTION_ID  }}    # set this to your Azure Subscription Id
     AZURE_RESOURCEGROUP_NAME: MyTestRGroup                     # set this to your preferred resource group name
     AZURE_WEBAPP_NAME: mytestwebapp2022                         # set this to your preferred web app name
-    ASP_NAME: mytestasp2022-asp
+    ASP_NAME: mytestasp2022
     SQLSERVER_NAME: testsqlserver2022                         # set this to your preferred sql server name
     DATABASE_NAME: testsqldb2022                  # set this to your preferred sql database name
     SQLADMIN_LOGIN: ${{ secrets.SQLADMIN_LOGIN  }}                # Create a secret in your Github repo for the SQL Admin login name you want to use
