--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -55,10 +55,10 @@ jobs:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
       - name: create db connection string
-        run: |
-          echo CONN_STR=$(az sql db show-connection-string --client ado.net --server ${{ env.SQLSERVER_NAME }} --name ${{ env.DATABASE_NAME }} -o tsv)
-          echo CONN_STR=$(echo $CONN_STR | sed "s/<username>/${{ env.SQLADMIN_LOGIN }}/g")
-          echo CONN_STR=$(echo $CONN_STR | sed "s/<password>/${{ env.SQLADMIN_PASS }}/g")
+        run: |   
+          $CONN_STR=(az sql db show-connection-string --client ado.net --server ${{ env.SQLSERVER_NAME }} --name ${{ env.DATABASE_NAME }} -o tsv)
+          $CONN_STR= CONN_STR.Replace("<username>", ${{ env.SQLADMIN_LOGIN }})
+          $CONN_STR = CONN_STR.Replace("****",{{ env.SQLADMIN_PASS }}
           echo "::set-env name=SQL_DB_CONN_STR:: $CONN_STR"
       - name: Update Database
         run: |
