--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -54,13 +54,13 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: create db connection string
-        run: |   
-          $CONN_STR=(az sql db show-connection-string --client ado.net --server ${{ env.SQLSERVER_NAME }} --name ${{ env.DATABASE_NAME }} -o tsv)
-          echo "$CONN_STR"
-          $CONN_STR= $CONN_STR.Replace("<username>", "${{ env.SQLADMIN_LOGIN }}")
-          $CONN_STR = $CONN_STR.Replace("****","${{ env.SQLADMIN_PASS }}")
-          echo "::set-env name=SQL_DB_CONN_STR:: $CONN_STR"
+#       - name: create db connection string
+#         run: |   
+#           $CONN_STR=(az sql db show-connection-string --client ado.net --server ${{ env.SQLSERVER_NAME }} --name ${{ env.DATABASE_NAME }} -o tsv)
+#           echo "$CONN_STR"
+#           $CONN_STR= $CONN_STR.Replace("<username>", "${{ env.SQLADMIN_LOGIN }}")
+#           $CONN_STR = $CONN_STR.Replace("****","${{ env.SQLADMIN_PASS }}")
+#           echo "::set-env name=SQL_DB_CONN_STR:: $CONN_STR"
       - name: Update Database
         run: |
           dotnet tool install --global dotnet-ef
